fix overflow

--- a/static/main.css
+++ b/static/main.css
@@ -147,6 +147,8 @@ canvas {
 
 .score-table td {
 	padding: 10px;
+    overflow: hidden;
+    max-width: 7em;
 }
 
 .request-setting {
